another section create sucsessfully for all divices

--- a/index.html
+++ b/index.html
@@ -37,32 +37,61 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </nav> 
 </div>
 </div>
 </header>
-
 <main>
 <div class="container">
 <section>
+  <div class="for-adj"></div>
 <div class="row home-content-s">
-
-
 <div class="col-lg-7 home-c-text">
 <h1 class="text-left">Hi, I am Adif, <br>
    Web Devoloper</h1>
     <p class="text-left">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet  sint. <br>  Velit officia consequat duis enim velit mollit.Exercitation veniam  consequat sunt nostrud amet.</p>
 
 <button class="c-btn">Download Resume</button>
-
 </div>
-
-
 <div class="col-lg-5  pic-div-c">
   <img class="my-img" src="img/AirBrush_20230901185053.jpg" alt="">
 </div>
+</div>
+</section>
 
+<!-- 
+  -----------------
+  new section start here 
+  -----------------
+-->
+<section class="home-u-content">
 
+<div class="home-main-sec d-flex gap-3 justify-content-center align-items-center">
+
+  <div class="home-d-main-div"  >
+    <p class="h-d-hd-text">Recent post</p>
+<h3>Making a design With HTML CSS And JS</h3>
+<div class="d-flex h-d-mini justify-content-between">
+
+  <p class="h-d-p-text">12 Feb 2020</p>
+<span class="line"></span>
+  <p class="h-d-p-text2">Desing, Devolopment</p>
+</div>
+<p class="h-d-p-text-p">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+  </div>
+<!-- 2nd div  -->
+  <div class="home-d-main-div"  >
+<p class="text-end h-d-hd-text">Veiw All</p>
+    <h3>Creating pixel perfect website</h3>
+    <div class="d-flex h-d-mini justify-content-between">
+  
+      <p class="h-d-p-text">12 Feb 2020</p>
+    <span class="line"></span>
+      <p class="h-d-p-text2">Good Looking, Pixel perfect</p>
+    </div>
+    <p class="h-d-p-text-p">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+
+  </div>
 </div>
 
 
@@ -73,7 +102,6 @@
 
 </div>
 </main>
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
